--- a/index.css
+++ b/index.css
@@ -341,6 +341,20 @@ header table {
     color:#18161b;
     font-weight:300;
 }
+#contact form select {
+    width:96%;
+    margin:20px 1%;
+    padding:8px 10px;
+    border:0px;
+    border-bottom:3px solid #18161b;
+    padding:8px 10px;
+    font-size:18px;
+    background:transparent;
+    resize:none;
+    transition:0.4s ease-in-out;
+    color:#18161b;
+    font-weight:300;
+}
 #contact form input:focus {
     outline:none;
     border-bottom:2px solid #18161b;
