--- a/index.css
+++ b/index.css
@@ -278,7 +278,7 @@ header table {
         text-align: initial;
 }
 #bio p{
-    font-size: 1.67em;
+    font-size: 17px;
     color:#dfd2c3;
     margin-top:2em;
 }
